2007-05-31  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/31483
	* trans-expr.c (gfc_conv_function_call): Give a dummy
	procedure the correct type if it has alternate returns.
	

	PR fortran/31540
	* resolve.c (resolve_fl_procedure): Resolve constant character
	lengths.

	PR fortran/31867
	PR fortran/31994
	* trans-array.c (gfc_conv_expr_descriptor): Obtain the stored
	offset for non-descriptor, source arrays and correct for stride
	not equal to one before writing to field of output descriptor.

2007-05-17  Tobias Burnus  <burnus@net-b.de>

	* gfortran.texi (GFORTRAN_CONVERT_UNIT): Improve documentation.

2007-05-16  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	PR fortran/31725
	* trans-expr.c (gfc_conv_substring): Evaluate substring bounds
	only once.

2007-05-13  Release Manager

	* GCC 4.2.0 released.

2007-04-30  Daniel Franke  <franke.daniel@gmail.com>

	* intrinsic.texi (IERRNO): Changed class to non-elemental function.
	(LOG10): Removed COMPLEX as accepted argument type.
	(NEW_LINE): Changed class from elemental to inquiry function.
	(SIGN): Removed requirement of scalar arguments.
	(SNGL): Changed class to elemental function.

2007-04-29  Daniel Franke  <franke.daniel@gmail.com>

	* gfortran.texi: Cleaned up keyword index.
	* invoke.texi: Likewise.
	* intrinsic.texi: Likewise.

2007-04-29  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/31711
	* trans-array.c (gfc_conv_resolve_dependencies): Create a temp
	whenever a dependency is found.

2007-04-27  Brooks Moses  <brooks.moses@codesourcery.com>

	* intrinsic.texi (Transfer): Improve documentation.

2007-04-27  Brooks Moses  <brooks.moses@codesourcery.com>

	* gfortran.texi (Option Index): Add @samp as needed.
	* invoke.texi: Removed extraneous line.
	(-fshort-enums): Fixed intexing.

2007-04-27  Daniel Franke  <franke.daniel@gmail.com>

	Backport from trunk:
	* intrinsic.texi (NULL, PACK, PRESENT, REPEAT, SCAN, SHAPE, 
	SIZE, TRANSPOSE, TRIM, VERIFY): New.