@@ -1,3 +1,8 @@
+2007-06-20  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/32302
+	* gfortran.dg/common_resize_1.f90: New test.
+
 2007-06-19  Richard Guenther  <rguenther@suse.de>
 	Michael Matz  <matz@suse.de>
 
